Upgraded Java 25, Spring 3.5.9, and Gradle 9.2.1